# jornada-de-dados

aula-01/: exemplo_00.py  exercicio.py  pyproject.toml
aula-02/: exercicios.py  pyproject.toml
aula-03/: pyproject.toml
aula-03/aula_03/: exercicios.py
aula-04/: pyproject.toml
aula-04/aula_04/: exercicios.py
aula-07/: desafio.py  exemplo_00.py  pyproject.toml
aula-08/: etl.py  pipeline.py  pyproject.toml
aula-09/: dados.parquet  etl.py  exemplo_00.py  pyproject.toml  requeriments.txt
aula-10/: pyproject.toml
aula-11/: pyproject.toml
aula-11/src/: csv-teste.py  exemplo.csv
aula-11/src/interface/: usar_class.py
aula-11/src/interface/classes/: csv_class.py
aula-12/: pyproject.toml
aula-12/data/csv_files/: 1.csv
aula-12/data/txt_files/: teste.txt
aula-13/: pyproject.toml
aula-13/FakeApi/: start.py
aula-16/: main.py  pyproject.toml
aula-17/: exemplo_01.py  meubanco.db  pyproject.toml
aula-18/: exemplo_00.py  pyproject.toml
aula-18/src/: main.py  pokemon.db  schema.py
aula-19/: database.py  main.py  models.py  pyproject.toml  teste.db  teste.py
