[tool.poetry]
name = "aula-09"
version = "0.1.0"
description = ""
authors = ["André Mendes Nunes <branco.de@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pandas = "^2.2.2"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
