[tool.poetry]
name = "aula-13"
version = "0.1.0"
description = ""
authors = ["André Mendes Nunes <branco.de@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
fastapi = "^0.112.0"
faker = "^27.0.0"
boto3 = "^1.34.160"
botocore = "^1.34.160"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
